--- a/frontend-api-client/rule_steps.html
+++ b/frontend-api-client/rule_steps.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Story Steps - Chatbot API Client</title>
+    <title>Rule Steps - Chatbot API Client</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -13,18 +13,18 @@
         <a href="intents.html"><button>Intents</button></a>
         <a href="stories.html"><button>Stories</button></a>
         <a href="rules.html"><button>Rules</button></a>
-        <a href="rule_steps.html"><button>Rule Steps</button></a>
+        <a href="rule_steps.html"><button class="active">Rule Steps</button></a>
         <a href="intent_examples.html"><button>Intent Examples</button></a>
-        <a href="story_steps.html"><button class="active">Story Steps</button></a>
+        <a href="story_steps.html"><button>Story Steps</button></a>
         <a href="train.html"><button>Train</button></a>
         <a href="domain.html"><button>Domain</button></a>
     </div>
     <div id="content"></div>
 
     <script src="./js/apiClient.js"></script>
-    <script src="./js/modules/storySteps.js"></script>
+    <script src="./js/modules/ruleSteps.js"></script>
     <script>
-        window.onload = function () { renderStorySteps(); }
+        window.onload = function () { renderRuleSteps(); }
     </script>
 </body>
 
