--- a/frontend-api-client/index.html
+++ b/frontend-api-client/index.html
@@ -13,7 +13,7 @@
         <a href="intents.html"><button>Intents</button></a>
         <a href="stories.html"><button>Stories</button></a>
         <a href="rules.html"><button>Rules</button></a>
-        <a href="rule_steps.html"><button>Rule Steps</button></a>
+        <!-- <a href="rule_steps.html"><button>Rule Steps</button></a> -->
         <a href="intent_examples.html"><button>Intent Examples</button></a>
         <a href="story_steps.html"><button>Story Steps</button></a>
         <a href="train.html"><button>Train</button></a>
@@ -28,7 +28,7 @@
             <li><strong>Intents</strong> - Define what a user might want to do</li>
             <li><strong>Intent Examples</strong> - Example phrases for each intent</li>
             <li><strong>Stories</strong> - Conversation flows between the user and bot</li>
-            <li><strong>Story Steps</strong> - Individual steps that make up a story</li>
+            <!-- <li><strong>Story Steps</strong> - Individual steps that make up a story</li> -->
             <li><strong>Rules</strong> - Simple rules for the bot to follow</li>
             <li><strong>Domain</strong> - Define responses, session configuration, and more</li>
             <li><strong>Train</strong> - Train your chatbot model</li>
