--- a/frontend-api-client/intents.html
+++ b/frontend-api-client/intents.html
@@ -13,7 +13,7 @@
         <a href="intents.html"><button class="active">Intents</button></a>
         <a href="stories.html"><button>Stories</button></a>
         <a href="rules.html"><button>Rules</button></a>
-        <a href="rule_steps.html"><button>Rule Steps</button></a>
+        <!-- <a href="rule_steps.html"><button>Rule Steps</button></a> -->
         <a href="intent_examples.html"><button>Intent Examples</button></a>
         <a href="story_steps.html"><button>Story Steps</button></a>
         <a href="train.html"><button>Train</button></a>
