--- a/frontend-api-client/story_steps.html
+++ b/frontend-api-client/story_steps.html
@@ -18,6 +18,7 @@
         <a href="story_steps.html"><button class="active">Story Steps</button></a>
         <a href="train.html"><button>Train</button></a>
         <a href="domain.html"><button>Domain</button></a>
+        <a href="config.html"><button>Configuration</button></a>
     </div>
     <div id="content"></div>
 
