--- a/frontend-api-client/domain.html
+++ b/frontend-api-client/domain.html
@@ -17,6 +17,7 @@
         <a href="story_steps.html"><button>Story Steps</button></a>
         <a href="train.html"><button>Train</button></a>
         <a href="domain.html"><button class="active">Domain</button></a>
+        <a href="config.html"><button>Configuration</button></a>
     </div>
     <div id="content"></div>
 
